--- a/website/package.json
+++ b/website/package.json
@@ -4,19 +4,25 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "express": "^4.16.4",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.4.20",
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.3",
     "react-parallax": "^2.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start_server": "node src/server_index.js",
+    "dev": "nodemon src/server_index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,5 +32,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "nodemon": "^1.18.10"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
