--- a/website/package.json
+++ b/website/package.json
@@ -7,6 +7,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.20",
     "react": "^16.8.3",
