--- a/website/package.json
+++ b/website/package.json
@@ -12,10 +12,11 @@
     "mongoose": "^5.4.20",
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.6",
+    "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^16.8.3",
     "react-parallax": "^2.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.8",
     "reactstrap": "^7.1.0",
     "validator": "^10.11.0"
   },
