--- a/website/package.json
+++ b/website/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.10",
@@ -26,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start_server": "node src/server_index.js",
-    "dev": "nodemon src/server_index.js"
+    "dev": "env-cmd ./config/dev.env nodemon src/server_index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +42,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {
+    "env-cmd": "^8.0.2",
     "nodemon": "^1.18.10"
   },
   "keywords": [],
