server/hosting test

--- a/website/config/dev.env
+++ b/website/config/dev.env
@@ -1,5 +1,5 @@
 PORT=3001
-MONGODB_URL_SERVER=mongodb+srv://admin:Passw0rd@keepu-967e2.azure.mongodb.net/test
+MONGODB_URL=mongodb+srv://admin:Passw0rd@keepu-967e2.azure.mongodb.net/test
 
 
-MONGODB_URL=mongodb://127.0.0.1:27017/keepu_api
+MONGODB_URL_LOCAL=mongodb://127.0.0.1:27017/keepu_api
