--- a/website/package.json
+++ b/website/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^3.0.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
+    "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
@@ -27,8 +28,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start_server": "node src/server_index.js",
-    "dev": "env-cmd ./config/dev.env nodemon src/server_index.js"
+    "start_server": "env-cmd ./config/dev.env node src/server.js",
+    "dev": "env-cmd ./config/dev.env nodemon src/server.js",
+    "client": "cd website && concurrently \"npm run start\" \"npm run start_server\"",
+    "client1": "cd website"
   },
   "eslintConfig": {
     "extends": "react-app"
