--- a/website/package.json
+++ b/website/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "html2canvas": "^1.0.0-rc.1",
     "react": "^16.8.3",
+    "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^16.8.3",
     "react-parallax": "^2.1.0",
     "react-router-dom": "^4.3.1",
