--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start_server": "env-cmd ./config/dev.env node server.js",
-    "dev": "env-cmd ./config/dev.env nodemon src/server.js",
+    "dev": "nodemon server.js",
     "start2": " concurrently \"npm run start\" \"npm run start1\"",
     "client1": "cd website",
     "start": "node server.js",
